--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: App-ZofCMS-Plugin-Debug-Validator-HTML
-version: 0.0101
+version: 0.0102
 author:
   - "Zoffix <'zoffix@cpan.org'>"
 abstract: debugging plugin for auto validating HTML
@@ -8,6 +8,7 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
+  HTML::Entities: 1.35
   LWP::UserAgent: 2.036
   WebService::Validator::HTML::W3C: 0.22
 build_requires:
@@ -15,7 +16,7 @@ build_requires:
 provides:
   App::ZofCMS::Plugin::Debug::Validator::HTML:
     file: lib/App/ZofCMS/Plugin/Debug/Validator/HTML.pm
-    version: 0.0101
+    version: 0.0102
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
