--- a/META.yml
+++ b/META.yml
@@ -1,23 +1,27 @@
 ---
-name: App-ZofCMS-Plugin-Debug-Validator-HTML
-version: 0.0102
+abstract: 'debugging plugin for auto validating HTML'
 author:
   - "Zoffix <'zoffix@cpan.org'>"
-abstract: debugging plugin for auto validating HTML
+build_requires:
+  Test::More: 0
+configure_requires:
+  Module::Build: 0
+dynamic_config: 1
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
 license: perl
-resources:
-  license: http://dev.perl.org/licenses/
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: App-ZofCMS-Plugin-Debug-Validator-HTML
+provides:
+  App::ZofCMS::Plugin::Debug::Validator::HTML:
+    file: lib/App/ZofCMS/Plugin/Debug/Validator/HTML.pm
+    version: 0.0103
 requires:
   HTML::Entities: 1.35
   LWP::UserAgent: 2.036
   WebService::Validator::HTML::W3C: 0.22
-build_requires:
-  Test::More: 0
-provides:
-  App::ZofCMS::Plugin::Debug::Validator::HTML:
-    file: lib/App/ZofCMS/Plugin/Debug/Validator/HTML.pm
-    version: 0.0102
-generated_by: Module::Build version 0.2808
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  perl: 5.006
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.0103
